# movie-rating-system

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: config.py  logging_config.py  main.py
app/controller/: __init__.py  movie.py  movies.py  movies_controller.py
app/db/: __init__.py  database.py
app/exceptions/: __init__.py  handlers.py  http_exceptions.py
app/models/: __init__.py  director.py  genre.py  movie.py  movie_rating.py
app/repositories/: __init__.py  movie.py  movies_repository.py
app/schemas/: __init__.py  common.py  movie.py
app/services/: __init__.py  movie.py  movies_service.py
scripts/: run_seed.py  seed_check.py  seeddb.sql
